@@ -3,6 +3,11 @@
 #define _GNU_SOURCE
 #endif
 
+/* If we're not using GNU C, elide __attribute__ */
+#ifndef __GNUC__
+#  define  __attribute__(x)  /*NOTHING*/
+#endif
+
 #ifndef HAVE_LIBZ
 #undef CHECKSUM
 #endif
